# ApolloCodingExercise

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup_db.py
app/: database.py  main.py  models.py  schemas.py
tests/: test_vehicles.py
